--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.ts]
-quote_type = single
+ij_any_space_before_for_left_brace = true
 
 [*.md]
 max_line_length = off
