Create registry and SPARQL editor

--- a/package.json
+++ b/package.json
@@ -19,14 +19,23 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@codemirror/autocomplete": "^6.10.2",
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-sql": "^6.5.4",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.21.3",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@triply/yasqe": "^4.2.28",
     "@types/bootstrap": "^5.2.7",
+    "@types/codemirror": "^5.60.12",
+    "@uiw/codemirror-theme-github": "^4.21.20",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "codemirror": "^6.0.1",
+    "codemirror-lang-sparql": "^1.0.0",
     "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "tsv": "^0.2.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -34,6 +43,7 @@
     "@angular/cli": "^16.2.5",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.8.7",
     "@types/tsv": "^0.2.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
